--- a/src/docs/asciidoc/member-review.adoc
+++ b/src/docs/asciidoc/member-review.adoc
@@ -5,7 +5,7 @@
 :toc: left
 :toclevels: 2
 
-== 사용자 피어리뷰 등록 [AccessToken 필수]
+== 사용자 피어리뷰 작성 [AccessToken 필수]
 === 1. 해당 사용자에 대해 두 번이상 피어리뷰를 남길 수 없다
 HTTP Request
 include::{snippets}/MemberApi/PeerReview/Write/Failure/Case1/http-request.adoc[]
@@ -36,7 +36,7 @@ include::{snippets}/MemberApi/PeerReview/Write/Failure/Case3/request-fields.adoc
 HTTP Response
 include::{snippets}/MemberApi/PeerReview/Write/Failure/Case3/response-body.adoc[]
 
-=== 4. 피어리뷰 등록을 성공한다
+=== 4. 피어리뷰 작성을 성공한다
 HTTP Request
 include::{snippets}/MemberApi/PeerReview/Write/Success/http-request.adoc[]
 include::{snippets}/MemberApi/PeerReview/Write/Success/request-headers.adoc[]
@@ -47,17 +47,27 @@ HTTP Response
 include::{snippets}/MemberApi/PeerReview/Write/Success/http-response.adoc[]
 
 == 사용자 피어리뷰 수정 [AccessToken 필수]
-=== 1. 피어리뷰 기록이 존재하지 않는다면 수정을 할 수 없다
+=== 1. 작성한 피어리뷰가 없다면 수정할 수 없다
 HTTP Request
-include::{snippets}/MemberApi/PeerReview/Update/Failure/http-request.adoc[]
-include::{snippets}/MemberApi/PeerReview/Update/Failure/request-headers.adoc[]
-include::{snippets}/MemberApi/PeerReview/Update/Failure/path-parameters.adoc[]
-include::{snippets}/MemberApi/PeerReview/Update/Failure/request-fields.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case1/http-request.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case1/request-headers.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case1/path-parameters.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case1/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/MemberApi/PeerReview/Update/Failure/response-body.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case1/response-body.adoc[]
 
-=== 2. 피어리뷰 수정에 성공한다
+=== 2. 이전과 동일한 내용으로 피어리뷰를 수정할 수 없다
+HTTP Request
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case2/http-request.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case2/request-headers.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case2/path-parameters.adoc[]
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case2/request-fields.adoc[]
+
+HTTP Response
+include::{snippets}/MemberApi/PeerReview/Update/Failure/Case2/response-body.adoc[]
+
+=== 3. 피어리뷰 수정에 성공한다
 HTTP Request
 include::{snippets}/MemberApi/PeerReview/Update/Success/http-request.adoc[]
 include::{snippets}/MemberApi/PeerReview/Update/Success/request-headers.adoc[]
