--- a/src/docs/asciidoc/study-notice.adoc
+++ b/src/docs/asciidoc/study-notice.adoc
@@ -1,58 +1,58 @@
-= 공지사항 생성 및 삭제 API
+= 스터디 공지사항 작성/수정/삭제 API
 :doctype: book
 :icons: font
 :source-highlighter: highlightjs
 :toc: left
 :toclevels: 2
 
-== 공지사항 등록 [AccessToken 필수]
-=== 1. 팀장이 아니라면 공지사항을 등록할 수 없다
+== 공지사항 작성 [AccessToken 필수]
+=== 1. 팀장이 아니라면 공지사항을 작성할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/Notice/Register/Failure/http-request.adoc[]
-include::{snippets}/StudyApi/Notice/Register/Failure/request-headers.adoc[]
-include::{snippets}/StudyApi/Notice/Register/Failure/path-parameters.adoc[]
-include::{snippets}/StudyApi/Notice/Register/Failure/request-fields.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Failure/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Failure/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Failure/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Failure/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Notice/Register/Failure/response-body.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Failure/response-body.adoc[]
 
-=== 2. 공지사항 등록에 성공한다
+=== 2. 공지사항 작성에 성공한다
 HTTP Request
-include::{snippets}/StudyApi/Notice/Register/Success/http-request.adoc[]
-include::{snippets}/StudyApi/Notice/Register/Success/request-headers.adoc[]
-include::{snippets}/StudyApi/Notice/Register/Success/path-parameters.adoc[]
-include::{snippets}/StudyApi/Notice/Register/Success/request-fields.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Success/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Success/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Success/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Success/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Notice/Register/Success/http-response.adoc[]
+include::{snippets}/StudyApi/Notice/Write/Success/http-response.adoc[]
 
 == 공지사항 삭제 [AccessToken 필수]
 === 1. 팀장이 아니라면 공지사항을 삭제할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case1/http-request.adoc[]
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case1/request-headers.adoc[]
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case1/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case1/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case1/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case1/path-parameters.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case1/response-body.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case1/response-body.adoc[]
 
 === 2. 작성자가 아니라면 공지사항을 삭제할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case2/http-request.adoc[]
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case2/request-headers.adoc[]
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case2/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/path-parameters.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Notice/Remove/Failure/Case2/response-body.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/response-body.adoc[]
 
 === 3. 공지사항 삭제에 성공한다
 HTTP Request
-include::{snippets}/StudyApi/Notice/Remove/Success/http-request.adoc[]
-include::{snippets}/StudyApi/Notice/Remove/Success/request-headers.adoc[]
-include::{snippets}/StudyApi/Notice/Remove/Success/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Success/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Success/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Success/path-parameters.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Notice/Remove/Success/http-response.adoc[]
+include::{snippets}/StudyApi/Notice/Delete/Success/http-response.adoc[]
 
 == 공지사항 수정 [AccessToken 필수]
 === 1. 팀장이 아니라면 공지사항을 수정할 수 없다
