--- a/src/docs/asciidoc/study-notice-comment.adoc
+++ b/src/docs/asciidoc/study-notice-comment.adoc
@@ -1,67 +1,67 @@
-= 공지사항 댓글 API
+= 공지사항 댓글 작성/수정/삭제 API
 :doctype: book
 :icons: font
 :source-highlighter: highlightjs
 :toc: left
 :toclevels: 2
 
-== 공지사항 댓글 생성 [AccessToken 필수]
-=== 1. 스터디 참여자가 아니면 공지사항에 댓글을 등록할 수 없다
+== 공지사항 댓글 작성 [AccessToken 필수]
+=== 1. 스터디 참여자가 아니면 공지사항에 댓글을 작성할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/NoticeComment/Register/Failure/http-request.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Register/Failure/request-headers.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Register/Failure/path-parameters.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Register/Failure/request-fields.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Failure/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Failure/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Failure/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Failure/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/NoticeComment/Register/Failure/http-response.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Failure/http-response.adoc[]
 
-=== 2. 공지사항에 대한 댓글 등록에 성공한다
+=== 2. 공지사항에 대한 댓글 작성에 성공한다
 HTTP Request
-include::{snippets}/StudyApi/NoticeComment/Register/Success/http-request.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Register/Success/request-headers.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Register/Success/path-parameters.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Register/Success/request-fields.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Success/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Success/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Success/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Success/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/NoticeComment/Register/Success/http-response.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Write/Success/http-response.adoc[]
 
 == 공지사항 댓글 삭제 [AccessToken 필수]
 === 1. 작성자가 아니면 댓글을 삭제할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/NoticeComment/Remove/Failure/http-request.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Remove/Failure/request-headers.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Remove/Failure/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Failure/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Failure/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Failure/path-parameters.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/NoticeComment/Remove/Failure/response-body.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Failure/response-body.adoc[]
 
 === 2. 공지사항에 대한 댓글 삭제에 성공한다
 HTTP Request
-include::{snippets}/StudyApi/NoticeComment/Remove/Success/http-request.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Remove/Success/request-headers.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Remove/Success/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Success/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Success/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Success/path-parameters.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/NoticeComment/Remove/Success/http-response.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Delete/Success/http-response.adoc[]
 
 == 공지사항 댓글 수정 [AccessToken 필수]
 === 1. 작성자가 아니면 댓글을 수정할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/NoticeComment/Update/Failure/http-request.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Update/Failure/request-headers.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Update/Failure/path-parameters.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Update/Failure/request-fields.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Failure/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Failure/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Failure/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Failure/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/NoticeComment/Update/Failure/response-body.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Failure/response-body.adoc[]
 
 === 2. 공지사항에 대한 댓글 수정에 성공한다
 HTTP Request
-include::{snippets}/StudyApi/NoticeComment/Update/Success/http-request.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Update/Success/request-headers.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Update/Success/path-parameters.adoc[]
-include::{snippets}/StudyApi/NoticeComment/Update/Success/request-fields.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Success/http-request.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Success/request-headers.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Success/path-parameters.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Success/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/NoticeComment/Update/Success/http-response.adoc[]
+include::{snippets}/StudyApi/Notice/Comment/Update/Success/http-response.adoc[]
