--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -5,9 +5,9 @@
 :toc: left
 :toclevels: 2
 
-include::oauth.adoc[leveloffset=+1]
+include::auth/oauth.adoc[leveloffset=+1]
 
-include::token-reissue.adoc[leveloffset=+1]
+include::auth/token-reissue.adoc[leveloffset=+1]
 
 include::member-signup.adoc[leveloffset=+1]
 
