--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -11,6 +11,8 @@ include::auth/token-reissue.adoc[leveloffset=+1]
 
 include::category/category.adoc[leveloffset=+1]
 
+include::favorite/study-favorite.adoc[leveloffset=+1]
+
 include::member-signup.adoc[leveloffset=+1]
 
 include::member-information.adoc[leveloffset=+1]
@@ -18,8 +20,6 @@ include::member-information.adoc[leveloffset=+1]
 include::member-review.adoc[leveloffset=+1]
 
 include::member-report.adoc[leveloffset=+1]
-
-include::study-favorite.adoc[leveloffset=+1]
 
 include::study-register.adoc[leveloffset=+1]
 
