refactor: `MemberReport` 코드 컨벤션에 따른 리팩토링 & REST Docs 문서 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -17,7 +17,7 @@ include::member-information.adoc[leveloffset=+1]
 
 include::member/member-review.adoc[leveloffset=+1]
 
-include::member-report.adoc[leveloffset=+1]
+include::member/member-report.adoc[leveloffset=+1]
 
 include::study-register.adoc[leveloffset=+1]
 
