--- a/src/docs/asciidoc/member/member-report.adoc
+++ b/src/docs/asciidoc/member/member-report.adoc
@@ -6,7 +6,7 @@
 :toclevels: 2
 
 == 사용자 신고 [AccessToken 필수]
-=== 1. 이전에 신고한 내역이 처리되지 않고 접수상태로 남아있다면 중복 신고를 하지 못한다
+=== 1. 이전에 신고한 내역이 여전히 처리중이라면 중복 신고를 하지 못한다
 HTTP Request
 include::{snippets}/MemberApi/Report/Failure/http-request.adoc[]
 include::{snippets}/MemberApi/Report/Failure/request-headers.adoc[]
@@ -16,7 +16,7 @@ include::{snippets}/MemberApi/Report/Failure/request-body.adoc[]
 HTTP Response
 include::{snippets}/MemberApi/Report/Failure//response-body.adoc[]
 
-=== 2. 사용자 신고에 성공한다
+=== 2. 특정 사용자를 신고한다
 HTTP Request
 include::{snippets}/MemberApi/Report/Success/http-request.adoc[]
 include::{snippets}/MemberApi/Report/Success/request-headers.adoc[]
