--- a/src/docs/asciidoc/study/study-review.adoc
+++ b/src/docs/asciidoc/study/study-review.adoc
@@ -6,17 +6,27 @@
 :toclevels: 2
 
 == 스터디 리뷰 작성 [AccessToken 필수]
-=== 1. 졸업자가 아니면 리뷰를 작성할 수 없다
+=== 1. 스터디 졸업자가 아니면 리뷰를 작성할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/Review/Write/Failure/http-request.adoc[]
-include::{snippets}/StudyApi/Review/Write/Failure/request-headers.adoc[]
-include::{snippets}/StudyApi/Review/Write/Failure/path-parameters.adoc[]
-include::{snippets}/StudyApi/Review/Write/Failure/request-fields.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case1/http-request.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case1/request-headers.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case1/path-parameters.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case1/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Review/Write/Failure/response-body.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case1/response-body.adoc[]
 
-=== 2. 리뷰 작성에 성공한다
+=== 2. 이미 리뷰를 작성했다면 추가 작성할 수 없다
+HTTP Request
+include::{snippets}/StudyApi/Review/Write/Failure/Case2/http-request.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case2/request-headers.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case2/path-parameters.adoc[]
+include::{snippets}/StudyApi/Review/Write/Failure/Case2/request-fields.adoc[]
+
+HTTP Response
+include::{snippets}/StudyApi/Review/Write/Failure/Case2/response-body.adoc[]
+
+=== 3. 스터디 리뷰를 작성한다
 HTTP Request
 include::{snippets}/StudyApi/Review/Write/Success/http-request.adoc[]
 include::{snippets}/StudyApi/Review/Write/Success/request-headers.adoc[]
@@ -27,7 +37,7 @@ HTTP Response
 include::{snippets}/StudyApi/Review/Write/Success/http-response.adoc[]
 
 == 스터디 리뷰 수정 [AccessToken 필수]
-=== 1. 작성자가 아니면 리뷰를 수정할 수 없다
+=== 1. 스터디 리뷰 작성자가 아닌 사람이 수정을 시도하면 예외가 발생한다
 HTTP Request
 include::{snippets}/StudyApi/Review/Update/Failure/http-request.adoc[]
 include::{snippets}/StudyApi/Review/Update/Failure/request-headers.adoc[]
@@ -37,7 +47,7 @@ include::{snippets}/StudyApi/Review/Update/Failure/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Review/Update/Failure/response-body.adoc[]
 
-=== 2. 리뷰 수정에 성공한다
+=== 2. 작성한 스터디 리뷰를 수정한다
 HTTP Request
 include::{snippets}/StudyApi/Review/Update/Success/http-request.adoc[]
 include::{snippets}/StudyApi/Review/Update/Success/request-headers.adoc[]
@@ -48,7 +58,7 @@ HTTP Response
 include::{snippets}/StudyApi/Review/Update/Success/http-response.adoc[]
 
 == 스터디 리뷰 삭제 [AccessToken 필수]
-=== 1. 작성자가 아니면 리뷰를 삭제할 수 없다
+=== 1. 스터디 리뷰 작성자가 아닌 사람이 삭제를 시도하면 예외가 발생한다
 HTTP Request
 include::{snippets}/StudyApi/Review/Delete/Failure/http-request.adoc[]
 include::{snippets}/StudyApi/Review/Delete/Failure/request-headers.adoc[]
@@ -57,7 +67,7 @@ include::{snippets}/StudyApi/Review/Delete/Failure/path-parameters.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Review/Delete/Failure/response-body.adoc[]
 
-=== 2. 리뷰 삭제에 성공한다
+=== 2. 작성한 스터디 리뷰를 삭제한다
 HTTP Request
 include::{snippets}/StudyApi/Review/Delete/Success/http-request.adoc[]
 include::{snippets}/StudyApi/Review/Delete/Success/request-headers.adoc[]
