refactor: `StudyNotice` 코드 컨벤션에 따른 리팩토링 & REST Docs 문서 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -31,9 +31,9 @@ include::study-information.adoc[leveloffset=+1]
 
 include::study-participation.adoc[leveloffset=+1]
 
-include::study-notice.adoc[leveloffset=+1]
+include::study/study-notice.adoc[leveloffset=+1]
 
-include::study-notice-comment.adoc[leveloffset=+1]
+include::study/study-notice-comment.adoc[leveloffset=+1]
 
 include::study/study-review.adoc[leveloffset=+1]
 
