--- a/src/docs/asciidoc/study/study-notice.adoc
+++ b/src/docs/asciidoc/study/study-notice.adoc
@@ -16,7 +16,7 @@ include::{snippets}/StudyApi/Notice/Write/Failure/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Notice/Write/Failure/response-body.adoc[]
 
-=== 2. 공지사항 작성에 성공한다
+=== 2. 스터디 공지사항을 작성한다
 HTTP Request
 include::{snippets}/StudyApi/Notice/Write/Success/http-request.adoc[]
 include::{snippets}/StudyApi/Notice/Write/Success/request-headers.adoc[]
@@ -37,7 +37,7 @@ include::{snippets}/StudyApi/Notice/Update/Failure/Case1/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Notice/Update/Failure/Case1/response-body.adoc[]
 
-=== 2. 작성자가 아니라면 공지사항을 수정할 수 없다
+=== 2. 공지사항 작성자가 아닌 사람이 수정을 시도하면 예외가 발생한다
 HTTP Request
 include::{snippets}/StudyApi/Notice/Update/Failure/Case2/http-request.adoc[]
 include::{snippets}/StudyApi/Notice/Update/Failure/Case2/request-headers.adoc[]
@@ -47,7 +47,7 @@ include::{snippets}/StudyApi/Notice/Update/Failure/Case2/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Notice/Update/Failure/Case2/response-body.adoc[]
 
-=== 3. 공지사항 수정에 성공한다
+=== 3. 공지사항을 수정한다
 HTTP Request
 include::{snippets}/StudyApi/Notice/Update/Success/http-request.adoc[]
 include::{snippets}/StudyApi/Notice/Update/Success/request-headers.adoc[]
@@ -67,7 +67,7 @@ include::{snippets}/StudyApi/Notice/Delete/Failure/Case1/path-parameters.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Notice/Delete/Failure/Case1/response-body.adoc[]
 
-=== 2. 작성자가 아니라면 공지사항을 삭제할 수 없다
+=== 2. 공지사항 작성자가 아닌 사람이 삭제를 시도하면 예외가 발생한다
 HTTP Request
 include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/http-request.adoc[]
 include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/request-headers.adoc[]
@@ -76,7 +76,7 @@ include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/path-parameters.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Notice/Delete/Failure/Case2/response-body.adoc[]
 
-=== 3. 공지사항 삭제에 성공한다
+=== 3. 공지사항을 삭제한다
 HTTP Request
 include::{snippets}/StudyApi/Notice/Delete/Success/http-request.adoc[]
 include::{snippets}/StudyApi/Notice/Delete/Success/request-headers.adoc[]
