refactor: `StudyAttendance` 코드 컨벤션에 따른 리팩토링 & REST Docs 문서 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -37,7 +37,7 @@ include::study/study-notice-comment.adoc[leveloffset=+1]
 
 include::study/study-review.adoc[leveloffset=+1]
 
-include::study-attendance.adoc[leveloffset=+1]
+include::study/study-attendance.adoc[leveloffset=+1]
 
 include::study-weekly.adoc[leveloffset=+1]
 
