--- a/src/docs/asciidoc/study/study-attendance.adoc
+++ b/src/docs/asciidoc/study/study-attendance.adoc
@@ -36,7 +36,7 @@ include::{snippets}/StudyApi/Attendance/ManualCheck/Failure/Case3/request-fields
 HTTP Response
 include::{snippets}/StudyApi/Attendance/ManualCheck/Failure/Case3/response-body.adoc[]
 
-=== 4. 수동 출석 체크에 성공한다
+=== 4. 수동 출석 체크를 진행한다
 HTTP Request
 include::{snippets}/StudyApi/Attendance/ManualCheck/Success/http-request.adoc[]
 include::{snippets}/StudyApi/Attendance/ManualCheck/Success/request-headers.adoc[]
