refactor: `StudyWeekly` 코드 컨벤션에 따른 리팩토링 & REST Docs 문서 수정

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -39,7 +39,9 @@ include::study/study-review.adoc[leveloffset=+1]
 
 include::study/study-attendance.adoc[leveloffset=+1]
 
-include::study-weekly.adoc[leveloffset=+1]
+include::study/study-weekly.adoc[leveloffset=+1]
+
+include::study/study-weekly-assignment-submit.adoc[leveloffset=+1]
 
 include::favorite/study-favorite.adoc[leveloffset=+1]
 
