--- a/src/docs/asciidoc/study/study-create-update-terminate.adoc
+++ b/src/docs/asciidoc/study/study-create-update-terminate.adoc
@@ -1,11 +1,39 @@
-= 스터디 정보 수정, 종료 API
+= 스터디 생성/수정/종료 API
 :doctype: book
 :icons: font
 :source-highlighter: highlightjs
 :toc: left
 :toclevels: 2
 
-== 스터디 정보 수정 [AccessToken 필수]
+== 스터디 생성 [AccessToken 필수]
+=== 1. 이미 사용하고 있는 이름이면 스터디 생성에 실패한다
+HTTP Request
+include::{snippets}/StudyApi/Create/Failure/http-request.adoc[]
+include::{snippets}/StudyApi/Create/Failure/request-headers.adoc[]
+include::{snippets}/StudyApi/Create/Failure/request-fields.adoc[]
+
+HTTP Response
+include::{snippets}/StudyApi/Create/Failure/response-body.adoc[]
+
+=== 2. 스터디를 생성한다 - 온라인
+HTTP Request
+include::{snippets}/StudyApi/Create/Success/Case1/http-request.adoc[]
+include::{snippets}/StudyApi/Create/Success/Case1/request-headers.adoc[]
+include::{snippets}/StudyApi/Create/Success/Case1/request-fields.adoc[]
+
+HTTP Response
+include::{snippets}/StudyApi/Create/Success/Case1/http-response.adoc[]
+
+=== 3. 스터디를 생성한다 - 오프라인
+HTTP Request
+include::{snippets}/StudyApi/Create/Success/Case2/http-request.adoc[]
+include::{snippets}/StudyApi/Create/Success/Case2/request-headers.adoc[]
+include::{snippets}/StudyApi/Create/Success/Case2/request-fields.adoc[]
+
+HTTP Response
+include::{snippets}/StudyApi/Create/Success/Case2/http-response.adoc[]
+
+== 스터디 수정 [AccessToken 필수]
 === 1. 스터디 팀장이 아니라면 정보를 수정할 수 없다
 HTTP Request
 include::{snippets}/StudyApi/Update/Failure/Case1/http-request.adoc[]
@@ -16,7 +44,7 @@ include::{snippets}/StudyApi/Update/Failure/Case1/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Update/Failure/Case1/response-body.adoc[]
 
-=== 2. 스터디 해시태그 개수가 0개면 스터디 정보를 수정할 수 없다 [최소 1개]
+=== 2. 다른 스터디가 사용하고 있는 이름으로 수정할 수 없다
 HTTP Request
 include::{snippets}/StudyApi/Update/Failure/Case2/http-request.adoc[]
 include::{snippets}/StudyApi/Update/Failure/Case2/request-headers.adoc[]
@@ -26,7 +54,7 @@ include::{snippets}/StudyApi/Update/Failure/Case2/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Update/Failure/Case2/response-body.adoc[]
 
-=== 3. 스터디 해시태그 개수가 5개를 초과하면 스터디 정보를 수정할 수 없다 [최대 5개]
+=== 3. 현재 참여자 수보다 낮게 스터디 정원을 수정할 수 없다
 HTTP Request
 include::{snippets}/StudyApi/Update/Failure/Case3/http-request.adoc[]
 include::{snippets}/StudyApi/Update/Failure/Case3/request-headers.adoc[]
@@ -36,7 +64,7 @@ include::{snippets}/StudyApi/Update/Failure/Case3/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Update/Failure/Case3/response-body.adoc[]
 
-=== 4. 다른 스터디가 사용하고 있는 스터디명으로 정보를 수정할 수 없다
+=== 4. 졸업 요건 수정 기회가 남아있지 않음에 따라 스터디 정보를 수정할 수 없다
 HTTP Request
 include::{snippets}/StudyApi/Update/Failure/Case4/http-request.adoc[]
 include::{snippets}/StudyApi/Update/Failure/Case4/request-headers.adoc[]
@@ -46,27 +74,7 @@ include::{snippets}/StudyApi/Update/Failure/Case4/request-fields.adoc[]
 HTTP Response
 include::{snippets}/StudyApi/Update/Failure/Case4/response-body.adoc[]
 
-=== 5. 최대 수용인원을 현재 스터디 인원보다 적게 설정할 수 없다
-HTTP Request
-include::{snippets}/StudyApi/Update/Failure/Case5/http-request.adoc[]
-include::{snippets}/StudyApi/Update/Failure/Case5/request-headers.adoc[]
-include::{snippets}/StudyApi/Update/Failure/Case5/path-parameters.adoc[]
-include::{snippets}/StudyApi/Update/Failure/Case5/request-fields.adoc[]
-
-HTTP Response
-include::{snippets}/StudyApi/Update/Failure/Case5/response-body.adoc[]
-
-=== 6. 졸업 요건 수정 기회가 남아있지 않음에 따라 스터디 정보를 수정할 수 없다
-HTTP Request
-include::{snippets}/StudyApi/Update/Failure/Case6/http-request.adoc[]
-include::{snippets}/StudyApi/Update/Failure/Case6/request-headers.adoc[]
-include::{snippets}/StudyApi/Update/Failure/Case6/path-parameters.adoc[]
-include::{snippets}/StudyApi/Update/Failure/Case6/request-fields.adoc[]
-
-HTTP Response
-include::{snippets}/StudyApi/Update/Failure/Case6/response-body.adoc[]
-
-=== 7. 정보 수정에 성공한다 - 온라인
+=== 5. 스터디 정보를 수정한다 - 온라인
 HTTP Request
 include::{snippets}/StudyApi/Update/Success/Case1/http-request.adoc[]
 include::{snippets}/StudyApi/Update/Success/Case1/request-headers.adoc[]
@@ -74,9 +82,9 @@ include::{snippets}/StudyApi/Update/Success/Case1/path-parameters.adoc[]
 include::{snippets}/StudyApi/Update/Success/Case1/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Update/Success/Case1/http-response.adoc[]
+include::{snippets}/StudyApi/Update/Success/Case1/response-body.adoc[]
 
-=== 8. 정보 수정에 성공한다 - 오프라인
+=== 6. 스터디 정보를 수정한다 - 오프라인
 HTTP Request
 include::{snippets}/StudyApi/Update/Success/Case2/http-request.adoc[]
 include::{snippets}/StudyApi/Update/Success/Case2/request-headers.adoc[]
@@ -84,23 +92,23 @@ include::{snippets}/StudyApi/Update/Success/Case2/path-parameters.adoc[]
 include::{snippets}/StudyApi/Update/Success/Case2/request-fields.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Update/Success/Case2/http-response.adoc[]
+include::{snippets}/StudyApi/Update/Success/Case2/response-body.adoc[]
 
 == 스터디 종료 [AccessToken 필수]
 === 1. 스터디 팀장이 아니라면 스터디를 종료할 수 없다
 HTTP Request
-include::{snippets}/StudyApi/Close/Failure/http-request.adoc[]
-include::{snippets}/StudyApi/Close/Failure/request-headers.adoc[]
-include::{snippets}/StudyApi/Close/Failure/path-parameters.adoc[]
+include::{snippets}/StudyApi/Terminate/Failure/http-request.adoc[]
+include::{snippets}/StudyApi/Terminate/Failure/request-headers.adoc[]
+include::{snippets}/StudyApi/Terminate/Failure/path-parameters.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Close/Failure/response-body.adoc[]
+include::{snippets}/StudyApi/Terminate/Failure/response-body.adoc[]
 
 === 2. 스터디를 종료한다
 HTTP Request
-include::{snippets}/StudyApi/Close/Success/http-request.adoc[]
-include::{snippets}/StudyApi/Close/Success/request-headers.adoc[]
-include::{snippets}/StudyApi/Close/Success/path-parameters.adoc[]
+include::{snippets}/StudyApi/Terminate/Success/http-request.adoc[]
+include::{snippets}/StudyApi/Terminate/Success/request-headers.adoc[]
+include::{snippets}/StudyApi/Terminate/Success/path-parameters.adoc[]
 
 HTTP Response
-include::{snippets}/StudyApi/Close/Success/http-response.adoc[]
+include::{snippets}/StudyApi/Terminate/Success/response-body.adoc[]
