refactor: StudyWeekly 첨부파일, 과제 제출 관련 FileUpload 전용 컴포넌트 분리

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -45,4 +45,4 @@ include::study/study-weekly-assignment-submit.adoc[leveloffset=+1]
 
 include::favorite/study-favorite.adoc[leveloffset=+1]
 
-include::upload/image-upload.adoc[leveloffset=+1]
+include::file/image-upload.adoc[leveloffset=+1]
